# dev-clean

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  QUICKSTART.md  README.md  config.example.toml  index.html  script.js  spec.md  styles.css  todo.md
.codex/environments/: environment.toml
benches/: scan_baselines.rs
crates/dev-cleaner-core/: Cargo.toml
crates/dev-cleaner-core/src/: evaluation.rs  lib.rs  recommend.rs  trash.rs  utils.rs
crates/dev-cleaner-core/src/app/: apply_plan.rs  cleanup.rs  mod.rs  scan.rs
crates/dev-cleaner-core/src/cleaner/: mod.rs
crates/dev-cleaner-core/src/policy/: keep.rs
crates/dev-cleaner-core/src/scanner/: detector.rs  size_calculator.rs  walker.rs
crates/dev-cleaner-core/src/stats/: mod.rs
docs/: design.md
macos/DevCleanerMac/: Package.swift
macos/DevCleanerMac/Sources/DevCleanerMac/App/: DevCleanerMacApp.swift
macos/DevCleanerMac/Sources/DevCleanerMac/Models/: BridgeModels.swift
macos/DevCleanerMac/Sources/DevCleanerMac/Services/: BridgeClient.swift
macos/DevCleanerMac/Sources/DevCleanerMac/Stores/: AppModel.swift
macos/DevCleanerMac/Sources/DevCleanerMac/Support/: Formatters.swift
macos/DevCleanerMac/Sources/DevCleanerMac/Views/: CleanupViews.swift  ContentView.swift  DashboardView.swift  DesignTokens.swift  HistoryView.swift  RecommendationsView.swift  ScanResultsView.swift  SettingsView.swift  SidebarView.swift  TrashView.swift
macos/DevCleanerMac/Tests/DevCleanerMacTests/: BridgeClientTests.swift
script/: build_and_run_mac.sh
src/: audit.rs  bridge.rs  clean_progress.rs  evaluation.rs  lib.rs  main.rs  metrics.rs  plan.rs  recommend.rs  trash.rs  utils.rs
src/app/: apply_plan.rs  cleanup.rs  mod.rs  scan.rs
src/cleaner/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/interactive/: mod.rs  select.rs
src/policy/: keep.rs  mod.rs
src/scanner/: detector.rs  mod.rs  size_calculator.rs  walker.rs
src/stats/: mod.rs
src/tui/: mod.rs
tests/: cli_flows.rs
