[workspace]
members = [".", "crates/dev-cleaner-core"]

[package]
name = "dev-cleaner"
version = "0.2.0"
edition = "2021"
authors = ["Sian Cao"]
description = "A smart developer tool for cleaning temporary build directories"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sonald/dev-clean"

[dependencies]
dev-cleaner-core = { path = "crates/dev-cleaner-core", version = "0.2.0" }

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# TUI
ratatui = "0.26"
crossterm = "0.27"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Progress bar
indicatif = "0.17"

# Colors
colored = "2.1"
prettytable-rs = "0.10"

# Error handling
anyhow = "1.0"

dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
fs2 = "0.4"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.9"

[[bench]]
name = "scan_baselines"
harness = false
